<resources>
    <string name="app_name">"ImageCool"</string>
    <string name="app_name_album">"Album"</string>
    <string name="scan_done">Scan asset packages finished.</string>
    <string name="splash_ad_title">Ad Space</string>
    <string name="splash_ad_message">No ad is available yet. Contact us on Telegram.</string>
    <string name="splash_tg_contact">TG: @ImageCoolSupport</string>
    <string name="sort_label">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_name_asc">Name A-Z</string>
    <string name="sort_name_desc">Name Z-A</string>
    <string name="sort_image_count">Images</string>
    <string name="sort_image_count_asc">Images fewer first</string>
    <string name="sort_image_count_desc">Images more first</string>
    <string name="sort_size">Size</string>
    <string name="sort_size_asc">Size smaller first</string>
    <string name="sort_size_desc">Size larger first</string>
    <string name="display_mode_label">View</string>
    <string name="display_mode_list">List</string>
    <string name="display_mode_grid">Grid</string>
    <string name="upgrade_title">Update available</string>
    <string name="upgrade_message">Current version code: %1$d\nLatest version code: %2$d\nA newer APK is available on GitHub Releases.</string>
    <string name="upgrade_now">Update</string>
    <string name="upgrade_later">Later</string>
    <string name="upgrade_downloading">Downloading update...</string>
    <string name="upgrade_download_progress">Downloading: %1$d%%</string>
    <string name="upgrade_download_done">Download complete. Opening installer...</string>
    <string name="upgrade_download_failed">Download failed. Please try again.</string>
    <string name="upgrade_install_permission_required">Please allow this app to install unknown apps, then return to continue installation.</string>
    <string name="delete_apk_title">Delete APK?</string>
    <string name="delete_apk_message">Delete %1$s from local storage?</string>
    <string name="delete_apk_confirm">Delete</string>
    <string name="delete_apk_cancel">Cancel</string>
    <string name="delete_apk_success">APK deleted.</string>
    <string name="delete_apk_failed">Failed to delete APK.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_version_label">Version</string>
    <string name="settings_version_value">%1$s (%2$d)</string>
    <string name="settings_contacts_title">Contacts</string>
    <string name="settings_telegram_label">Telegram</string>
    <string name="settings_telegram_value">@ImageCoolSupport</string>
    <string name="settings_gmail_label">Gmail</string>
    <string name="settings_gmail_value">imagecool.reader@gmail.com</string>
    <string name="settings_github_label">GitHub</string>
    <string name="settings_github_value">github.com/zhangqi6627/ImageReader</string>
    <string name="settings_back">Back</string>
    <string name="settings_open_failed">No app can open this contact.</string>
</resources>
